--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
 </head>
 <body>
     <!-- header goes here -->
-    <header>
-        <h1>Hello</h1>
+    <header class="container">
+        
+        <nav class="navbar">
+            <div class="logo"><img src="images/Fitness.png" alt=""></div>
+
+            <div class="hamburger">
+                <img src="/images/align-justify.svg" alt="">
+            </div>
+
+            <ul class="menu">
+                <li class="active">Home</li>
+                <li>Service</li>
+                <li>Contact</li>
+                <li>About</li>
+            </ul>
+
+        </nav>
 
     </header>
 <!-- main contents -->
