banner section added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- header goes here -->
     <header class="container">
         
+        <!-- navbar started -->
         <nav class="navbar">
             <div class="logo"><img src="images/Fitness.png" alt=""></div>
 
@@ -25,6 +26,41 @@
             </ul>
 
         </nav>
+
+        <!-- banner started -->
+
+        <div class="banner">
+            <div class="left-banner">
+                <h1 class="c-w mb-40">Get body in <span class="shape">shape</span> & stay healthy</h1>
+                <p class="text-gray mb-40">Try Anytime Fitness for free and get your personalized plan PLUS redeem up to 3 months of Apple Fitness+ on us!* Ready to get started?</p>
+                <div class="two-button">
+                    <a class="btn-primary" href="#">Join Club Now!</a>
+                    <a class="btn-outline" href="#">Download App</a>
+
+                </div>
+
+            </div>
+
+            <div class="right-banner">
+                <img src="images/Images-2.png" alt="">
+                <div class="rec-1">
+                    <span class="span-1 c-w">500+</span>
+                    <p class="text-gray">Free Workout Videos</p>
+                </div>
+
+                <div class="rec-2">
+                    <img src="/images/play-icon.svg" alt="">
+                    <div class="inner-div">
+                        <span class="span-1 c-w">350+</span>
+                        <p class="text-gray">Video Tutorial</p>
+                    </div>
+                    
+                </div>
+
+            </div>
+        </div>
+
+
 
     </header>
 <!-- main contents -->
