change your habit section added

--- a/index.html
+++ b/index.html
@@ -54,17 +54,60 @@
                         <span class="span-1 c-w">350+</span>
                         <p class="text-gray">Video Tutorial</p>
                     </div>
-                    
+                </div>
+            </div>
+        </div>
+    </header>
+
+<!-- main contents -->
+    <main class="bg-black container">
+        <section class="section-1 section">
+            <center>
+                <h2 class="section-heading c-w mb-14">Change Your Habits</h2>
+                <p class="text-gray mb-40">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </center>
+            <div class="feature-items">
+                <div class="inner-item">
+                    <img class="mb-14" src="/images/image-3.png" alt="">
+                    <h3 class="c-w">Movement</h3>
+                    <p class="text-gray">We believe fitness should be accessible to everyone</p>
+                </div>
+
+                <div class="inner-item">
+                    <img class="mb-14" src="/images/image-2.png" alt="">
+                    <h3 class="c-w">Time</h3>
+                    <p class="text-gray">Try Anytime Fitness for free and get your personalized plan</p>
+                </div>
+
+                <div class="inner-item">
+                    <img class="mb-14" src="/images/image-4.png" alt="">
+                    <h3 class="c-w">Practice</h3>
+                    <p class="text-gray">Physical fitness is generally achieved through proper nutrition and Practice</p>
+                </div>
+
+                <div class="inner-item">
+                    <img class="mb-14" src="/images/image-5.png" alt="">
+                    <h3 class="c-w">Weight Loss</h3>
+                    <p class="text-gray">Eat a variety of foods, including fruits and healthy fats</p>
                 </div>
 
             </div>
-        </div>
+        </section>
+
+        <section class="section-2 section container">
+            <div class="promo">
+                <div class="promo-section-text">
+                    <h2 class="section-heading c-w mb-14">Run an Extra Mile Easily</h2>
+                    <p class="text-gray mb-40">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                    <a class="btn-primary" href="#">Join Now</a>
+                </div>
+                <div class="promo-section-img">
+                    <img src="/images/run.jpg" alt="">
+                </div>
+            </div>
 
 
-
-    </header>
-<!-- main contents -->
-    <main>
+        </section>
 
     </main>
     <!-- footer goes here -->
