team member added

--- a/index.html
+++ b/index.html
@@ -105,7 +105,70 @@
                     <img src="/images/run.jpg" alt="">
                 </div>
             </div>
+        </section>
 
+
+        <section class="section-1 section">
+            <center>
+                <h2 class="section-heading c-w mb-14">Meet Our Team</h2>
+                <p class="text-gray mb-40">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </center>
+            <div class="gallery-items">
+                <div class="team-member">
+                    <div class="image-wrapper">
+                        <img class="mb-14" src="/images/trainer1.png" alt="">
+                        <div class="info-overlay">
+                            <h3 class="name">Jerome Bell</h3>
+                            <p class="designation">Trainer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="image-wrapper">
+                        <img class="mb-14" src="/images/trainer2.png" alt="">
+                        <div class="info-overlay">
+                            <h3 class="name">Cameron Williamson</h3>
+                            <p class="designation">Trainer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="image-wrapper">
+                        <img class="mb-14" src="/images/trainer3.png" alt="">
+                        <div class="info-overlay">
+                            <h3 class="name">Darrell Steward</h3>
+                            <p class="designation">Trainer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="image-wrapper">
+                        <img class="mb-14" src="/images/trainer6.png" alt="">
+                        <div class="info-overlay">
+                            <h3 class="name">Darrell Steward</h3>
+                            <p class="designation">Trainer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="image-wrapper">
+                        <img class="mb-14" src="/images/trainer4.png" alt="">
+                        <div class="info-overlay">
+                            <h3 class="name">Darrell Steward</h3>
+                            <p class="designation">Trainer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-member">
+                    <div class="image-wrapper">
+                        <img class="mb-14" src="/images/trainer5.png" alt="">
+                        <div class="info-overlay">
+                            <h3 class="name">Darrell Steward</h3>
+                            <p class="designation">Trainer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
 
