--- a/index.html
+++ b/index.html
@@ -174,7 +174,33 @@
 
     </main>
     <!-- footer goes here -->
-    <footer>
+    <footer class="container">
+        <div class="footer section">
+            <div class="footer-1">
+                <img class="mb-14" src="/images/Fitness.png" alt="logo">
+                <p class="text-gray">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+            </div>
+            <div class="footer-2">
+                <h3 class="footer-header mb-14">Useful Links</h3>
+                <ul class="footer-menu text-gray">
+                    <li>Service</li>
+                    <li>Contact Us</li>
+                    <li>About Us</li>
+                    <li>Affiliate Program</li>
+                </ul>
+            </div>
+            <div class="footer-3">
+                <h3 class="footer-header mb-14">Pages</h3>
+                <ul class="footer-menu text-gray">
+                    <li>Fitness</li>
+                    <li>Platform</li>
+                    <li>Workout Library</li>
+                    <li>App Design</li>
+                </ul>
+            </div>
+        </div>
+        <div class="line"><hr></div>
+        <div class="copyright"><p class="copyright-text text-gray">All right reserved @Fitness 2024</p></div>
 
     </footer>
 
