image was not showing fixed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="logo"><img src="images/Fitness.png" alt=""></div>
 
             <div class="hamburger">
-                <img src="/images/align-justify.svg" alt="">
+                <img src="images/align-justify.svg" alt="">
             </div>
 
             <ul class="menu">
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="rec-2">
-                    <img src="/images/play-icon.svg" alt="">
+                    <img src="images/play-icon.svg" alt="">
                     <div class="inner-div">
                         <span class="span-1 c-w">350+</span>
                         <p class="text-gray">Video Tutorial</p>
@@ -68,25 +68,25 @@
             </center>
             <div class="feature-items">
                 <div class="inner-item">
-                    <img class="mb-14" src="/images/image-3.png" alt="">
+                    <img class="mb-14" src="images/image-3.png" alt="">
                     <h3 class="c-w">Movement</h3>
                     <p class="text-gray">We believe fitness should be accessible to everyone</p>
                 </div>
 
                 <div class="inner-item">
-                    <img class="mb-14" src="/images/image-2.png" alt="">
+                    <img class="mb-14" src="images/image-2.png" alt="">
                     <h3 class="c-w">Time</h3>
                     <p class="text-gray">Try Anytime Fitness for free and get your personalized plan</p>
                 </div>
 
                 <div class="inner-item">
-                    <img class="mb-14" src="/images/image-4.png" alt="">
+                    <img class="mb-14" src="images/image-4.png" alt="">
                     <h3 class="c-w">Practice</h3>
                     <p class="text-gray">Physical fitness is generally achieved through proper nutrition and Practice</p>
                 </div>
 
                 <div class="inner-item">
-                    <img class="mb-14" src="/images/image-5.png" alt="">
+                    <img class="mb-14" src="images/image-5.png" alt="">
                     <h3 class="c-w">Weight Loss</h3>
                     <p class="text-gray">Eat a variety of foods, including fruits and healthy fats</p>
                 </div>
@@ -102,7 +102,7 @@
                     <a class="btn-primary" href="#">Join Now</a>
                 </div>
                 <div class="promo-section-img">
-                    <img src="/images/run.jpg" alt="">
+                    <img src="images/run.jpg" alt="">
                 </div>
             </div>
 
@@ -181,7 +181,7 @@
             <div class="gallery-items">
                 <div class="team-member">
                     <div class="image-wrapper">
-                        <img class="mb-14" src="/images/trainer1.png" alt="">
+                        <img class="mb-14" src="images/trainer1.png" alt="">
                         <div class="info-overlay">
                             <h3 class="name">Jerome Bell</h3>
                             <p class="designation">Trainer</p>
@@ -190,7 +190,7 @@
                 </div>
                 <div class="team-member">
                     <div class="image-wrapper">
-                        <img class="mb-14" src="/images/trainer2.png" alt="">
+                        <img class="mb-14" src="images/trainer2.png" alt="">
                         <div class="info-overlay">
                             <h3 class="name">Cameron Williamson</h3>
                             <p class="designation">Trainer</p>
@@ -199,7 +199,7 @@
                 </div>
                 <div class="team-member">
                     <div class="image-wrapper">
-                        <img class="mb-14" src="/images/trainer3.png" alt="">
+                        <img class="mb-14" src="images/trainer3.png" alt="">
                         <div class="info-overlay">
                             <h3 class="name">Darrell Steward</h3>
                             <p class="designation">Trainer</p>
@@ -208,7 +208,7 @@
                 </div>
                 <div class="team-member">
                     <div class="image-wrapper">
-                        <img class="mb-14" src="/images/trainer6.png" alt="">
+                        <img class="mb-14" src="images/trainer6.png" alt="">
                         <div class="info-overlay">
                             <h3 class="name">Darrell Steward</h3>
                             <p class="designation">Trainer</p>
@@ -217,7 +217,7 @@
                 </div>
                 <div class="team-member">
                     <div class="image-wrapper">
-                        <img class="mb-14" src="/images/trainer4.png" alt="">
+                        <img class="mb-14" src="images/trainer4.png" alt="">
                         <div class="info-overlay">
                             <h3 class="name">Darrell Steward</h3>
                             <p class="designation">Trainer</p>
@@ -226,7 +226,7 @@
                 </div>
                 <div class="team-member">
                     <div class="image-wrapper">
-                        <img class="mb-14" src="/images/trainer5.png" alt="">
+                        <img class="mb-14" src="images/trainer5.png" alt="">
                         <div class="info-overlay">
                             <h3 class="name">Darrell Steward</h3>
                             <p class="designation">Trainer</p>
@@ -274,7 +274,7 @@
     <footer class="container">
         <div class="footer section">
             <div class="footer-1">
-                <img class="mb-14" src="/images/Fitness.png" alt="logo">
+                <img class="mb-14" src="images/Fitness.png" alt="logo">
                 <p class="text-gray">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
             </div>
             <div class="footer-2">
